--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,2 +1,7 @@
 [theme]
-base="light"
+base = "light"
+primaryColor = "#ffffff"
+backgroundColor = "#ffffff"
+secondaryBackgroundColor = "#f0f2f6"
+textColor = "#262730"
+font = "sans-serif"
